# MyHealthAssistantAPI

./: LICENSE  LICENSE.txt  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: test.yml
myhealthassistantapi/: main.py  setup.py
myhealthassistantapi/api/: deps.py  main.py
myhealthassistantapi/api/routes/: nutrition.py  utils.py
myhealthassistantapi/core/: config.py  db.py
myhealthassistantapi/models/: __init__.py  nutrition.py
myhealthassistantapi/tests/: __init__.py  conftest.py
myhealthassistantapi/tests/api/routes/: test_nutrition.py
myhealthassistantapi/tests/utils/: nutrition.py  utils.py
myhealthassistantapi/utils/: __init__.py  nutrition.py
scripts/: dev.sh  test.sh  venv.sh
